fixed mobile alignment

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -52,12 +52,12 @@
     -webkit-transition: all 0.6s ease-out;
 }
 
-//@media only screen  and (min-width: 550px) {
+@media only screen  and (min-width: 550px) {
     .imageTop{
     height: 300px;
     left: calc(50vw - 275px);
     }
-//}
+}
 
 .imageScroll{
     width: 200px;
